[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Tech Dungeon/Enemies/enemies x3.png" type="Texture" id=1]
[ext_resource path="res://idle.tres" type="Animation" id=2]
[ext_resource path="res://Source/Actors/RunnerGuy.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12.875, 18 )

[sub_resource type="Animation" id=2]
resource_name = "Death"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("EnemiesX3:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 150, 151, 152, 153, 154, 155, 156, 157 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "runLeft"
length = 0.75
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("EnemiesX3:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 130, 131, 132, 133 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("EnemiesX3:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
resource_name = "runRight"
length = 0.75
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("EnemiesX3:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 130, 131, 132, 133 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("EnemiesX3:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=5]
resource_name = "shootLeft"
length = 0.75
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("EnemiesX3:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 140, 141, 142, 143 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("EnemiesX3:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=6]
resource_name = "shootRight"
length = 0.75
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("EnemiesX3:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 140, 141, 142, 143 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("EnemiesX3:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="CircleShape2D" id=7]
radius = 55.0

[node name="RunnerGuy" type="KinematicBody2D" groups=["enemy"]]
collision_layer = 2
collision_mask = 20
script = ExtResource( 3 )
health = 50
speed = 300

[node name="EnemiesX3" type="Sprite" parent="."]
position = Vector2( -2, -14 )
texture = ExtResource( 1 )
flip_h = true
hframes = 10
vframes = 16
frame = 140

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -3, 4 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/Death = SubResource( 2 )
anims/idle = ExtResource( 2 )
anims/runLeft = SubResource( 3 )
anims/runRight = SubResource( 4 )
anims/shootLeft = SubResource( 5 )
anims/shootRight = SubResource( 6 )

[node name="lineOfSight" type="RayCast2D" parent="."]
position = Vector2( 1, 2 )
enabled = true
cast_to = Vector2( 1445, -1 )

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="pathTimer" type="Timer" parent="."]

[node name="killArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="killArea"]
shape = SubResource( 7 )

[connection signal="body_entered" from="killArea" to="." method="_on_killArea_body_entered"]
[connection signal="body_exited" from="killArea" to="." method="_on_killArea_body_exited"]
